--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
     "mysql2": "^3.11.5"
   }
 }
